test/should-fail/缺少endif-2.j
function f takes nothing returns nothing
    local integer x
    local integer y
    if true then
        set x = 4
        loop
        exitwhen true
      set y = 3
    set y = 8
endfunction
